istio/gateway-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: istio-egressgateway
spec:
 selector:
   istio: egressgateway
 servers:
 - port:
     number: 80
     name: http
     protocol: HTTP
   hosts:
   - "*"
 - port:
     number: 443
     name: tls
     protocol: TLS
   hosts:
   - "*"
   tls:
      mode: PASSTHROUGH
