istio/destination-rule-go-lb-hash.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-go
spec:
  host: service-go
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: x-lb-test
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
