istio/service-entry-egress-baidu.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-baidu
spec:
  hosts:
  - www.baidu.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-routing-https
spec:
  hosts:
  - www.baidu.com
  gateways:
  - mesh
  - istio-egressgateway
  tls:
  - match:
    - port: 443
      gateways:
      - mesh
      sni_hosts:
      - www.baidu.com
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
  - match:
    - port: 443
      gateways:
      - istio-egressgateway
      sni_hosts:
      - www.baidu.com
    route:
    - destination:
        host: www.baidu.com
