istio/virtual-service-go-delay-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-go
spec:
  host: service-go
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go
spec:
  hosts:
  - service-go
  http:
  - route:
    - destination:
        host: service-go
        subset: v1
    timeout: 5s
    fault:
      delay:
        percent: 50
        fixedDelay: 6s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-node
spec:
  hosts:
  - service-node
  http:
  - route:
    - destination:
        host: service-node
    retries:
      attempts: 3
      perTryTimeout: 2s
