istio/virtual-service-lua-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-lua
spec:
  host: service-lua
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-lua
spec:
  hosts:
  - service-lua
  http:
  - route:
    - destination:
        host: service-lua
        subset: v1
