istio/virtual-service-node-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-node
spec:
  hosts:
  - service-node
  http:
  - route:
    - destination:
        host: service-node
    timeout: 500ms
